Half finished port

--- a/src/main/resources/assets/schematica/lang/en_US.lang
+++ b/src/main/resources/assets/schematica/lang/en_US.lang
@@ -31,3 +31,5 @@ schematica.gui.printer=Printer
 schematica.key.load=Load schematic
 schematica.key.save=Save schematic
 schematica.key.control=Manipulate schematic
+
+schematica.item.debug=Schematic Debug Tool
