--- a/src/main/resources/assets/schematica/lang/ca_ES.lang
+++ b/src/main/resources/assets/schematica/lang/ca_ES.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Obrir carpeta d'esquemes
 schematica.gui.done=Fet
 schematica.gui.title=Seleccionar arxiu d'esquemes
@@ -18,16 +19,35 @@ schematica.gui.operations=Operacions
 schematica.gui.point.red=Punt Vermell
 schematica.gui.point.blue=Punt Blau
 schematica.gui.saveselection=Guardar la selecció com un esquema
-schematica.gui.enable=Activar
-schematica.gui.disable=Desactivar
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
-# schematica.gui.materials=Materials
-# schematica.gui.materialname=Material
 schematica.gui.materialamount=Quantitat
 schematica.gui.printer=Imprimir
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Carregar esquema
 schematica.key.save=Guardar esquema
 schematica.key.control=Manipular esquema
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
