--- a/src/main/resources/assets/schematica/lang/cs_CZ.lang
+++ b/src/main/resources/assets/schematica/lang/cs_CZ.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Otevřít složku se schématy
 schematica.gui.done=Hotovo
 schematica.gui.title=Vyberte soubor schématu
@@ -18,8 +19,6 @@ schematica.gui.operations=Operace
 schematica.gui.point.red=Rudý bod
 schematica.gui.point.blue=Modrý bod
 schematica.gui.saveselection=Uložit výběr jako schéma
-schematica.gui.enable=Zapnout
-schematica.gui.disable=Vypnout
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=Materiál
 schematica.gui.materialamount=Množství
 schematica.gui.printer=Tiskárna
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Načíst schéma
 schematica.key.save=Uložit schéma
 schematica.key.control=Manipulovat se schématem
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
