--- a/src/main/resources/assets/schematica/lang/da_DK.lang
+++ b/src/main/resources/assets/schematica/lang/da_DK.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Åbn schematics mappe
 schematica.gui.done=Færdig
 schematica.gui.title=Vælg schematic-fil
@@ -18,16 +19,36 @@ schematica.gui.operations=Operationer
 schematica.gui.point.red=Rødt punkt
 schematica.gui.point.blue=Blåt punkt
 schematica.gui.saveselection=Gem markeringen som en schematic
-schematica.gui.enable=Slå til
-schematica.gui.disable=Slå fra
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
 schematica.gui.materials=Materialer
 schematica.gui.materialname=Materiale
 schematica.gui.materialamount=Antal
-# schematica.gui.printer=Printer
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Åbn schematic
 schematica.key.save=Gem schematic
 schematica.key.control=Manipulér schematic
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
