--- a/src/main/resources/assets/schematica/lang/en_PT.lang
+++ b/src/main/resources/assets/schematica/lang/en_PT.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Open ye Blueprints
 schematica.gui.done=Plundered
 schematica.gui.title=Select ye Blueprint
@@ -18,8 +19,6 @@ schematica.gui.operations=Plans
 schematica.gui.point.red=Red dot
 schematica.gui.point.blue=Blue dot
 schematica.gui.saveselection=Save it as a blueprint
-schematica.gui.enable=Work
-schematica.gui.disable=Break
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=Stuff
 schematica.gui.materialamount=Number
 schematica.gui.printer=Printing thing
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Load yer blueprint
 schematica.key.save=Keep yer blueprint
 schematica.key.control=Change yer blueprint
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
