--- a/src/main/resources/assets/schematica/lang/es_ES.lang
+++ b/src/main/resources/assets/schematica/lang/es_ES.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Abrir carpeta de esquemas
 schematica.gui.done=Hecho
 schematica.gui.title=Seleccionar archivo de esquema
@@ -18,16 +19,36 @@ schematica.gui.operations=Acciones
 schematica.gui.point.red=Punto rojo
 schematica.gui.point.blue=Punto Azul
 schematica.gui.saveselection=Guardar selección como esquema
-schematica.gui.enable=Activar
-schematica.gui.disable=Desactivar
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
 schematica.gui.materials=Materiales
-# schematica.gui.materialname=Material
 schematica.gui.materialamount=Cantidad
 schematica.gui.printer=Impresora
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Cargar esquema
 schematica.key.save=Guardar esquema
 schematica.key.control=Editar esquema
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
