--- a/src/main/resources/assets/schematica/lang/es_MX.lang
+++ b/src/main/resources/assets/schematica/lang/es_MX.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Abrir carpeta de esquemas
 schematica.gui.done=Listo
 schematica.gui.title=Seleccionar archivo de esquema
@@ -18,16 +19,35 @@ schematica.gui.operations=Operaciones
 schematica.gui.point.red=Punto rojo
 schematica.gui.point.blue=Punto azul
 schematica.gui.saveselection=Guardar lo seleccionado como un esquema
-schematica.gui.enable=Activar
-schematica.gui.disable=Desactivar
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
 schematica.gui.materials=Materiales
-# schematica.gui.materialname=Material
 schematica.gui.materialamount=Cantidad
-# schematica.gui.printer=Printer
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Cargar esquema
 schematica.key.save=Guardar esquema
 schematica.key.control=Manipular esquema
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
