--- a/src/main/resources/assets/schematica/lang/fi_FI.lang
+++ b/src/main/resources/assets/schematica/lang/fi_FI.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Avaa kaavion sijainti
 schematica.gui.done=Valmis
 schematica.gui.title=Valitse kaavio tiedosto
@@ -18,8 +19,6 @@ schematica.gui.operations=Toiminnot
 schematica.gui.point.red=Punainen piste
 schematica.gui.point.blue=Sininen piste
 schematica.gui.saveselection=Tallenna valinta kaavana
-schematica.gui.enable=Ota käyttöön
-schematica.gui.disable=Poista käytöstä
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=Materiaali
 schematica.gui.materialamount=Määrä
 schematica.gui.printer=Tulostin
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Lataa kaava
 schematica.key.save=Tallenna kaava
 schematica.key.control=Käsittele kaavaa
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
