--- a/src/main/resources/assets/schematica/lang/fr_FR.lang
+++ b/src/main/resources/assets/schematica/lang/fr_FR.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Ouvrir le dossier schematic
 schematica.gui.done=Terminé
 schematica.gui.title=Sélectionner un schematic
@@ -18,8 +19,6 @@ schematica.gui.operations=Opérations
 schematica.gui.point.red=Point rouge
 schematica.gui.point.blue=Point bleu
 schematica.gui.saveselection=Sauvegarder la sélection en tant que schematic
-schematica.gui.enable=Activer
-schematica.gui.disable=Désactiver
 schematica.gui.x=X :
 schematica.gui.y=Y :
 schematica.gui.z=Z :
@@ -28,6 +27,29 @@ schematica.gui.materialname=Matériau
 schematica.gui.materialamount=Quantité
 schematica.gui.printer=Mode imprimante
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Charger un schematic
 schematica.key.save=Enregistrer le schematic
 schematica.key.control=Manipuler le schematic
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
