--- a/src/main/resources/assets/schematica/lang/hu_HU.lang
+++ b/src/main/resources/assets/schematica/lang/hu_HU.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Klisé könyvtár megnyitása
 schematica.gui.done=Kész
 schematica.gui.title=Klisé megnyitása
@@ -18,8 +19,6 @@ schematica.gui.operations=Műveletek
 schematica.gui.point.red=Piros pont
 schematica.gui.point.blue=Kék pont
 schematica.gui.saveselection=Kijelölés mentése kliséként
-schematica.gui.enable=Bekapcsol
-schematica.gui.disable=Kikapcsol
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=Anyag
 schematica.gui.materialamount=Mennyiség
 schematica.gui.printer=Nyomtató
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Klisé betöltése
 schematica.key.save=Klisé mentése
 schematica.key.control=Klisé módosítása
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
