--- a/src/main/resources/assets/schematica/lang/it_IT.lang
+++ b/src/main/resources/assets/schematica/lang/it_IT.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Apri cartella schematiche
 schematica.gui.done=Fatto
 schematica.gui.title=Seleziona file schematico
@@ -18,16 +19,36 @@ schematica.gui.operations=Operazioni
 schematica.gui.point.red=Punto rosso
 schematica.gui.point.blue=Punto blu
 schematica.gui.saveselection=Salva la selezione come schematica
-schematica.gui.enable=Abilita
-schematica.gui.disable=Disabilita
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
 schematica.gui.materials=Materiali
 schematica.gui.materialname=Materiale
 schematica.gui.materialamount=Quantità
-# schematica.gui.printer=Printer
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Carica schematica
 schematica.key.save=Salva schematica
 schematica.key.control=Manipola schematica
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
