--- a/src/main/resources/assets/schematica/lang/lt_LT.lang
+++ b/src/main/resources/assets/schematica/lang/lt_LT.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Atidaryti schemø aplankà
 schematica.gui.done=Baigta
 schematica.gui.title=Pasirinkite schemos failà
@@ -18,16 +19,36 @@ schematica.gui.operations=Veiksmas
 schematica.gui.point.red=Raudonasis taðkas
 schematica.gui.point.blue=Mëlynasis taðkas
 schematica.gui.saveselection=Iðsaugoti paþymëta plotà kaip schemà?
-schematica.gui.enable=Ájungti
-schematica.gui.disable=Iðjungti
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
 schematica.gui.materials=Medþiagos
 schematica.gui.materialname=Medþiaga
 schematica.gui.materialamount=Kiekis
-# schematica.gui.printer=Printer
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Atidaryti schemà
 schematica.key.save=Iðsaugoti schemà
 schematica.key.control=Manipuliuoti schemà
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
