--- a/src/main/resources/assets/schematica/lang/nl_NL.lang
+++ b/src/main/resources/assets/schematica/lang/nl_NL.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Open schematic map
 schematica.gui.done=Klaar
 schematica.gui.title=Selecteer schematic bestand
@@ -18,16 +19,36 @@ schematica.gui.operations=Handelingen
 schematica.gui.point.red=Rood punt
 schematica.gui.point.blue=Blauw punt
 schematica.gui.saveselection=Sla de selectie op als schematic
-schematica.gui.enable=Inschakelen
-schematica.gui.disable=Uitschakelen
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
 schematica.gui.materials=Materialen
 schematica.gui.materialname=Materiaal
 schematica.gui.materialamount=Hoeveelheid
-# schematica.gui.printer=Printer
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Laad schematic
 schematica.key.save=Sla schematic op
 schematica.key.control=Bewerk schematic
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
