--- a/src/main/resources/assets/schematica/lang/pl_PL.lang
+++ b/src/main/resources/assets/schematica/lang/pl_PL.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Otworz folder z schematami
 schematica.gui.done=Gotowe
 schematica.gui.title=Wybierz plik schematu
@@ -18,16 +19,36 @@ schematica.gui.operations=Operacje
 schematica.gui.point.red=Czerwony znacznik
 schematica.gui.point.blue=Niebieski znacznik
 schematica.gui.saveselection=Zapisz zaznaczenie jako schemat
-schematica.gui.enable=Wlacz
-schematica.gui.disable=Wylacz
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
 schematica.gui.materials=Materialy
-# schematica.gui.materialname=Material
 schematica.gui.materialamount=Ilosc
 schematica.gui.printer=Drukarka
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Ladowanie schematu
 schematica.key.save=Zapisywanie schematu
 schematica.key.control=Manipulacja schematem
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
