--- a/src/main/resources/assets/schematica/lang/pt_PT.lang
+++ b/src/main/resources/assets/schematica/lang/pt_PT.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Abrir pasta das schematicas
 schematica.gui.done=Feito
 schematica.gui.title=Selecionar schematica
@@ -18,8 +19,6 @@ schematica.gui.operations=Operaçőes
 schematica.gui.point.red=Ponto Vermelho
 schematica.gui.point.blue=Ponto Azul
 schematica.gui.saveselection=Guardar selecçăo como uma schematica
-schematica.gui.enable=Habilitar
-schematica.gui.disable=Desabilitar
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=Material
 schematica.gui.materialamount=Quantidade
 schematica.gui.printer=Modo de construçăo automática
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Carregar schematica
 schematica.key.save=Guardar schematica
 schematica.key.control=Manipular schematica
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
