--- a/src/main/resources/assets/schematica/lang/ru_RU.lang
+++ b/src/main/resources/assets/schematica/lang/ru_RU.lang
@@ -1,6 +1,7 @@
+# gui - general
 schematica.gui.openFolder=Открыть папку со схемами
 schematica.gui.done=Готово
-schematica.gui.title=Выберите файл Schematic
+schematica.gui.title=Выберите файл схемы
 schematica.gui.folderInfo=(Место хранения схем)
 schematica.gui.noschematic=-- Нет схем --
 schematica.gui.increase=+
@@ -17,9 +18,7 @@ schematica.gui.layers=Слои
 schematica.gui.operations=Операции
 schematica.gui.point.red=Красная точка
 schematica.gui.point.blue=Синяя точка
-schematica.gui.saveselection=Сохранить схему выделенной области. 
-schematica.gui.enable=Включить
-schematica.gui.disable=Выключить
+schematica.gui.saveselection=Сохранить схему выделенной области 
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,30 @@ schematica.gui.materialname=Материал
 schematica.gui.materialamount=Количество
 schematica.gui.printer=Принтер
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
+schematica.key.category=Schematica
 schematica.key.load=Загрузить схему
 schematica.key.save=Сохранить схему
 schematica.key.control=Манипулирование схемой
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
