--- a/src/main/resources/assets/schematica/lang/sk_SK.lang
+++ b/src/main/resources/assets/schematica/lang/sk_SK.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Otvoriť priečinok so schématami
 schematica.gui.done=Hotovo
 schematica.gui.title=Vyberte schematický súbor
@@ -18,8 +19,6 @@ schematica.gui.operations=Operácie
 schematica.gui.point.red=Červený bod
 schematica.gui.point.blue=Modrý bod
 schematica.gui.saveselection=Uložiť výber ako schému
-schematica.gui.enable=Povoliť
-schematica.gui.disable=Zakázať
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=Materiál
 schematica.gui.materialamount=Množstvo
 schematica.gui.printer=Tlačiareň
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Načítať schému
 schematica.key.save=Uložiť schému
 schematica.key.control=Manipulovať so schémou
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
