--- a/src/main/resources/assets/schematica/lang/sl_SI.lang
+++ b/src/main/resources/assets/schematica/lang/sl_SI.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Odpri shematično mapo
 schematica.gui.done=Končano
 schematica.gui.title=Izberi shematično datoteko
@@ -18,8 +19,6 @@ schematica.gui.operations=Operacije
 schematica.gui.point.red=Rdeča točka
 schematica.gui.point.blue=Modra točka
 schematica.gui.saveselection=Shrani izbrano območje kot shemo
-schematica.gui.enable=Omogoči
-schematica.gui.disable=Onemogoči
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=Material
 schematica.gui.materialamount=Količina
 schematica.gui.printer=Tiskalnik
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Naloži shemo
 schematica.key.save=Shrani shemo
 schematica.key.control=Manipuliraj shemo
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
