--- a/src/main/resources/assets/schematica/lang/tr_TR.lang
+++ b/src/main/resources/assets/schematica/lang/tr_TR.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Şematik klasörünü aç
 schematica.gui.done=Tamam
 schematica.gui.title=Şematik dosyasını seçin
@@ -18,8 +19,6 @@ schematica.gui.operations=İşlemler
 schematica.gui.point.red=Kırmızı nokta
 schematica.gui.point.blue=Mavi nokta
 schematica.gui.saveselection=Seçimi şematik olarak kaydet
-schematica.gui.enable=Etkin
-schematica.gui.disable=Devre Dışı
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=Malzeme
 schematica.gui.materialamount=Miktar
 schematica.gui.printer=Yazıcı
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=Şematiki yükle
 schematica.key.save=Şematiki kaydet
 schematica.key.control=Şematiki işleyin
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
