--- a/src/main/resources/assets/schematica/lang/uk_UA.lang
+++ b/src/main/resources/assets/schematica/lang/uk_UA.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=Відкрити папку з технологічними схемами
 schematica.gui.done=Готово
 schematica.gui.title=вибррати файл технологічної схеми
@@ -18,8 +19,6 @@ schematica.gui.operations=Операції
 schematica.gui.point.red=Червона мітка
 schematica.gui.point.blue=Синя мітка
 schematica.gui.saveselection=Зберегти виділену технологічну схему
-schematica.gui.enable=Увімкнути
-schematica.gui.disable=Вимкнути
 schematica.gui.x=Х:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=Матеріал
 schematica.gui.materialamount=кількість
 schematica.gui.printer=Принтер
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=завантажити технологічну схему
 schematica.key.save=Зберегти технологічну схему
 schematica.key.control=маніпулювати технологічною схемою схемою
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
