--- a/src/main/resources/assets/schematica/lang/zh_CN.lang
+++ b/src/main/resources/assets/schematica/lang/zh_CN.lang
@@ -1,3 +1,4 @@
+# gui - general
 schematica.gui.openFolder=打开Schematic文件夹
 schematica.gui.done=完成
 schematica.gui.title=选择Schematic文件
@@ -18,8 +19,6 @@ schematica.gui.operations=操作
 schematica.gui.point.red=红点
 schematica.gui.point.blue=蓝点
 schematica.gui.saveselection=将选区保存为Schematic文件
-schematica.gui.enable=启用
-schematica.gui.disable=禁用
 schematica.gui.x=X:
 schematica.gui.y=Y:
 schematica.gui.z=Z:
@@ -28,6 +27,29 @@ schematica.gui.materialname=材料
 schematica.gui.materialamount=数量
 schematica.gui.printer=投影
 
+# gui - config - categories
+
+# gui - config - debug
+
+# gui - config - render
+
+# gui - config - printer
+
+# gui - config - printer - swap slots
+
+# gui - config - general
+
+# gui - config - server
+
+# keys
 schematica.key.load=载入Schematic文件
 schematica.key.save=保存Schematic文件
 schematica.key.control=调整Schematic文件
+
+# commands - save
+
+# commands - list
+
+# commands - remove
+
+# commands - download
