--- a/src/main/resources/assets/schematica/lang/en_US.lang
+++ b/src/main/resources/assets/schematica/lang/en_US.lang
@@ -13,6 +13,8 @@ schematica.gui.movehere=Move here
 schematica.gui.flip=Flip
 schematica.gui.rotate=Rotate
 schematica.gui.save=Save
+schematica.gui.name=Name
+schematica.gui.savecoordinates=Save Coordinates
 schematica.gui.moveschematic=Move schematic
 schematica.gui.layers=Layers
 schematica.gui.operations=Operations
@@ -107,6 +109,10 @@ schematica.config.schematicDirectory.tooltip=Schematic directory.
 schematica.config.extraAirBlocks=Extra Air Blocks
 schematica.config.extraAirBlocks.tooltip=Extra blocks to consider as air for the schematic renderer.
 
+# chat
+Schematica.chat.saveCoordinatesSuccess=Successfully saved coordinates
+Schematica.chat.saveCoordinatesFail=Failed to save coordinates
+
 # gui - config - server
 schematica.config.printerEnabled=Allow Printer
 schematica.config.printerEnabled.tooltip=Allow players to use the printer.
@@ -154,4 +160,4 @@ schematica.command.download.downloadSucceeded=Successfully downloaded %s.
 schematica.command.download.downloadFail=Download failed.
 
 # items
-schematica.item.debug=Schematic Debug Tool
+item.debug.name=Schematic Debug Tool
