fancy dancy gui and tooltip

--- a/src/main/resources/assets/schematica/lang/en_US.lang
+++ b/src/main/resources/assets/schematica/lang/en_US.lang
@@ -30,7 +30,9 @@ schematica.gui.z=Z:
 schematica.gui.materials=Materials
 schematica.gui.materialname=Material
 schematica.gui.materialamount=Amount
+schematica.gui.materialtotal=Total
 schematica.gui.materialrequired=Required
+schematica.gui.materialmissing=Missing
 schematica.gui.materialavailable=Available
 schematica.gui.materialdump=Save to file
 schematica.gui.printer=Printer
